<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChitietActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Chi tiết sản phẩm">

        <FrameLayout
            android:id="@+id/frame_giohang"
            android:layout_width="55dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="right"

            android:layout_marginRight="10dp">

            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_sl"
                android:layout_width="28dp"
                android:layout_gravity="top|right"
                android:layout_height="28dp" />

            <ImageView
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_cart_24" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/chitietimg"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/iconnew_w512" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txttenspchitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tensp"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtgiachitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/giasp"
                android:textColor="@color/orange"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/spinner"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnthemvaogiohang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/orange"
                android:text="@string/themvaogiohang"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/motasp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtmotachitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:textSize="20dp" />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>